--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header h1 {
 .avatar {
     margin: 0 auto 20px;
 }
-.avatar img {avatar.jpg}
+.avatar img {img.Avatar.jpg}
     width: 150px;
     height: 150px;
     border-radius: 50%;
