--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background: #007BFF;
+    background: #8B0000;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -62,7 +62,7 @@ header h1 {
     margin-bottom: 10px;
 }
 .cta {
-    background: #007BFF;
+    background: #8B0000;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -89,7 +89,7 @@ header h1 {
 .teste_classes{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
-    background-color: #007BFF;
+    background-color: #8B0000;
     padding: 20px;
     margin: 30px;
 }
